# HelloStaticLib

./: CMakeCache.txt  CMakeLists.txt  HelloStaticLib  Makefile  README.md  cmake_install.cmake  helloStaticLib.cpp
Libraries/: CMakeLists.txt  Greeter.cpp  Greeter.h  Makefile  cmake_install.cmake
